--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -3,7 +3,7 @@
 <div class="field">
   <div class="control">
     <%= f.input :tweet, label: "Tweet about it", input_html: { class: "textarea"},
-                                                  wrapper: false, label_html: { class: "label"}, placeholder: "Compose a tweet..."  %>
+                                                  wrapper: false, label_html: { class: "label"}, placeholder: "Compose a tweet...", autofocus: true  %>
   </div>
 </div>
 <%= f.button :submit, class: "button is-info"  %>
