--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,9 +1,22 @@
-<p id="notice"><%= notice %></p>
+<div class="section">
+	<div class="container">
+		<div class="columns is-centered">
+			<div class="column is-half">
+				<h1 class="title">Tweeet</h1>
+				<%= render 'form', tweet: @tweet %>
+			</div>
+		</div>
+	</div>
+</div>
 
-<p>
-  <strong>Tweet:</strong>
-  <%= @tweet.tweet %>
-</p>
-
-<%= link_to 'Edit', edit_tweet_path(@tweet) %> |
-<%= link_to 'Back', tweets_path %>
+<nav class="navbar is-fixed-bottom">
+	<div class="navbar-menu">
+		<div class="navbar-item">
+			<div class="field is-grouped">
+				<p class="control">
+          <%= link_to 'Edit', edit_tweet_path(@tweet), class: "button is-dark" %> |
+					<%= link_to 'Back', tweets_path, class: "button is-dark" %>
+				</p>
+		</div>
+	</div>
+</nav>
